"Site Finalizado aguardando datafeed e redirecionamento de e-mail"

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -70,11 +70,35 @@
 
 @layer utilities {
   @keyframes marquee {
-    from { transform: translateX(60%); }
-    to { transform: translateX(-100%); }
+    from {
+      transform: translateX(60%);
+    }
+    to {
+      transform: translateX(-100%);
+    }
+  }
+
+  @media only screen and (min-width: 768px) {
+    @keyframes marquee {
+      from {
+        transform: translateX(100%);
+      }
+      to {
+        transform: translateX(-100%);
+      }
+    }
   }
 
   .animate-marquee {
     animation: marquee 14s linear infinite;
+  }
+
+  .mask-video {
+    mask-image: url("/video-mask.png");
+    mask-size: cover;
+    mask-repeat: no-repeat;
+    -webkit-mask-image: url("/video-mask.png"); /* Compatibilidade com Safari */
+    -webkit-mask-size: cover;
+    -webkit-mask-repeat: no-repeat;
   }
 }
